			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.
. [NEW] Director: Orientations are no longer supported. Only Portrait mode is supported. Use a ViewController to rotate the EAGL view.
. [NEW] Macros: ccgl* replaced with ccGL*
. [NEW] Math: Using kazmath for matrix and projection operations, and matrix GL stack
. [NEW] Math: Using NEON Matrix Multiplication from Oolong project
. [NEW] OpenGL ES: Added support for OpenGL ES 2.0. OpenGL ES 1.1 is no longer supported
. [NEW] Sprite: initWithTexture:rect is the designated initializer
. [NEW] Templates: Removed Xcode3 templates. Updated Xcode4 templates.
. [NEW] Tests: All tests use RootViewController
. [NEW] Tests: FontTest uses  "bundle" fonts instead of FontLabel
. [NEW] Tests: Removed HelloWorld* tests
. [NEW] Tests: TextureTest has TextureCache#asyncWithBlock test
. [NEW] Texture: Uses NPOT textures (gles20 already supports them)
. [NEW] Texture: PVRTC-RAW format is no longer supported. Use the non-raw format instead.
. [NEW] TextureCache: Added asyncWithBlock method
. [NEW] Tiled: cc_vertexz property is no longer supported. Will raise exception if found.
. [FIX] All: Removed deprecated methods and classes that were scheduled for removal post 1.0
. [FIX] ProgressTimer: reverse renamed to reverseDirection in order to prevent possible collision with action#reverse
. [FIX] RenderTexture: getUIImageFromBuffer doesn't return artifacs
. [FIX] TextureCache: Uses "self" instead of "CCTextureCache" in shared instance
. [FIX] Xcode: cocosLive: Removed. Use OpenFeint or GameCenter instead
. [FIX] Xcode: FontLabel: Removed since in iOS 4 you can load custom TTF
. [FIX] Xcode: TouchJSON: Removed. No longer needed since cocosLive was removed
. [FIX] Xcode: Tremor / vorbis: Removed. Experimental sound engine is no longer supported
. [FIX] Xcode: iOS 4 is minimun required to run

version 1.1 - XX-Ago-2011